@@ -1,5 +1,6 @@
 [buildout]
 package-name = collective.solr
+package-extras = [test]
 parts += alltests
 extensions = mr.developer
 sources = sources
